k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kv-infosys
  labels:
    name: kv-infosys
    app: kv-infosys
    environment: production
